IE browsers wrapped the subnav tabs. Specifying the witht of the subnav-section, will prevent this wrapping.

--- a/alps/alps.css
+++ b/alps/alps.css
@@ -325,6 +325,7 @@ padding:0px 5px 0px 10px;
  */
 
 #subnav {
+width: 720px;
 position:absolute;
 top:178px;
 height:40px;
